git-svn-id: svn://localhost/Media%20Server@4 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/rss-builder.html
+++ b/templates/default/rss-builder.html
@@ -22,6 +22,7 @@
 			<option value="30">30</option>
 			<option value="40">40</option>
 			<option value="50">50</option>
+			<option value="-1">No Limit</option>
 		</select>
 		<br />
 		Submit to go to the RSS feed, if your RSS client isn't automatically started then copy the URL and connect with your client of choice.
