git-svn-id: svn://localhost/Media%20Server@13 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -76,6 +76,7 @@
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/XMLTreeNode.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/FolderView.js"></script>
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Address.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/GMapPanel.js"></script>
 
     <!-- DESKTOP -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initializing Desktop...';</script>
