git-svn-id: svn://localhost/Media%20Server@14 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -39,6 +39,7 @@
 	{/literal}
 
 	<script type="text/javascript">
+		site_path = '/{$smarty.const.SITE_HTMLROOT}';
 		template_path = '/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}';
 		plugins_path = '/{$smarty.const.SITE_PLUGINS}';
 	</script>
