--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>{$smarty.const.SITE_NAME}</title>
 </head>
 
 <body>
+Choose Layout:<br />
+<a href="{$smarty.const.SITE_HTMLPATH}?template=default">Default</a> : <a href="{$smarty.const.SITE_HTMLPATH}?template=extjs">ExtJS</a>
 </body>
 </html>
