--- a/templates/extjs/css/Portal.css
+++ b/templates/extjs/css/Portal.css
@@ -1,6 +1,11 @@
 
-.x-panel {
-	margin-bottom:3px;
+.ux-task-panel {
+	margin-top:3px;
+	margin-left:3px;
+	margin-right:3px;
+}
+.ux-search-panel {
+	padding:3px;
 }
 .portal-window .thumb {
 }
@@ -87,7 +92,7 @@
 .ux-address .x-form-field-wrap .x-form-trigger {
 	position:relative;
 	height: 24px;
-	top:-1;
+	_top:-1;
 }
 
 
@@ -99,6 +104,18 @@
 
 .ux-button-inactive .x-btn-menu-arrow-el {
 	background-image:url(../images/btn-arrow.gif) !important;
+}
+
+.x-toolbar.ux-toolbar {
+	border:1px solid #A9BFD3;
+}
+
+.ux-leftpanel .x-panel-header {
+	border-top:0px;
+}
+
+.ux-grid3-header {
+	padding:0px;
 }
 
 
