--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -66,17 +66,21 @@
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/adapter/ext/ext-base.js"></script>
 
  	<!-- ENDLIBS -->
-	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components...';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/ext-all-debug.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Core Components';</script>
+    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/ext-all.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Library Mods)';</script>
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Library.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Buffered Components)';</script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedGridToolbar.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedGridView.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedRowSelectionModel.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedStore.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}ux/mediapanel.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Media Components)';</script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/XMLTreeNode.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/FolderView.js"></script>
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Address.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Extra Components)';</script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}ux/mediapanel.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/GMapPanel.js"></script>
 
     <!-- DESKTOP -->
