--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -52,6 +52,7 @@
 	</div>
     <!-- include everything after the loading indicator -->
     <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Filetypes.css" />
     <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Desktop.css" />
     <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Portal.css" />
     <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Downloads.css" />
@@ -66,8 +67,8 @@
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/adapter/ext/ext-base.js"></script>
 
  	<!-- ENDLIBS -->
-	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Core Components';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/ext-all.js"></script>
+	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Core Components)';</script>
+    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/ext-all-debug.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Library Mods)';</script>
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Library.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Buffered Components)';</script>
