--- a/templates/extjs/css/Filetypes.css
+++ b/templates/extjs/css/Filetypes.css
@@ -4,7 +4,7 @@
 .detail, .thumb {
 	background-repeat:no-repeat;
 }
-.detail.file_ext_ {
+.detail, .detail.file_ext_ {
 	background-image:url(/templates/extjs/images/filetypes/file_16x16.png);
 }
 .detail.file_ext_FOLDER {
@@ -13,7 +13,7 @@
 .detail.file_ext_MP3 {
 	background-image:url(/templates/extjs/images/filetypes/music_16x16.png);
 }
-.detail.file_ext_ {
+.thumb, .thumb.file_ext_ {
 	background-image:url(/templates/extjs/images/filetypes/file_96x96.png);
 }
 .thumb.file_ext_FOLDER {
