git-svn-id: svn://localhost/Media%20Server@26 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -60,6 +60,7 @@
     <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Global.css" />
 	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/examples.css" />
 	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/lib.css" />
+	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/resources/css/ext-ux-livegrid.css" />
 
     <!-- GC -->
  	<!-- LIBS -->
@@ -72,10 +73,11 @@
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Library Mods)';</script>
  	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Library.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Buffered Components)';</script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedGridToolbar.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedGridView.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedRowSelectionModel.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/BufferedStore.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/GridPanel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/GridView.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/RowSelectionModel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/Store.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/Toolbar.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Media Components)';</script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/XMLTreeNode.js"></script>
 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/FolderView.js"></script>
