--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -30,13 +30,17 @@
             	<a href="/{$smarty.const.SITE_PLUGINS}zip/{$files[file].id}/Files.zip">zip</a> :
                 <a href="/{$smarty.const.SITE_PLUGINS}bt/{$files[file].id}/Files.torrent">torrent</a>
                 {if $type=="video"}
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/MP4/File{$files[file].id}.mp4">mp4</a>
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/MPG/File{$files[file].id}.mpeg">mpg</a>
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/WMV/File{$files[file].id}.wmv">wmv</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP4/File{$files[file].id}.mp4">mp4</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MPG/File{$files[file].id}.mpeg">mpg</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/WMV/File{$files[file].id}.wmv">wmv</a>
                 {elseif $type=="audio"}
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/MP4A/File{$files[file].id}.mp4">mp4</a>
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
-                : <a href="/{$smarty.const.SITE_PLUGINS}passthru/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP4A/File{$files[file].id}.mp4">mp4</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
+                {elseif $type=="image"}
+                : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/JPEG/File{$files[file].id}.jpeg">jpeg</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/GIF/File{$files[file].id}.gif">gif</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/PNG/File{$files[file].id}.png">png</a>
                 {/if}
 			<br />
 		{/section}
