--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -38,7 +38,7 @@
                 : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
                 : <a href="/{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
                 {elseif $type=="image"}
-                : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/JPEG/File{$files[file].id}.jpeg">jpeg</a>
+                : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/JPG/File{$files[file].id}.jpg">jpg</a>
                 : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/GIF/File{$files[file].id}.gif">gif</a>
                 : <a href="/{$smarty.const.SITE_PLUGINS}convert/{$files[file].id}/PNG/File{$files[file].id}.png">png</a>
                 {/if}
