git-svn-id: svn://localhost/Media%20Server@42 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$smarty.const.SITE_NAME}</title>
+<title>{$smarty.const.HTML_NAME}</title>
 </head>
 
 <body>
 Choose Layout:<br />
-<a href="{$smarty.const.SITE_HTMLPATH}?template=default">Default</a> : <a href="{$smarty.const.SITE_HTMLPATH}?template=extjs">ExtJS</a>
+<a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=default">Default</a> : <a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=extjs">ExtJS</a>
 </body>
 </html>
