--- a/templates/default/m3u.html
+++ b/templates/default/m3u.html
@@ -11,14 +11,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$smarty.const.SITE_NAME}: M3U List</title>
+<title>{$smarty.const.HTML_NAME}: M3U List</title>
 </head>
 <body>
 Note: All non-media types will be filtered out using this list type.<br />
 Select your audio/video format:<br />
-<a href="/{$smarty.const.SITE_PLUGINS}list/{$ids}/MP4/Files.m3u">mp4</a>
-: <a href="/{$smarty.const.SITE_PLUGINS}list/{$ids}/MPG/Files.m3u">mpg/mp3</a>
-: <a href="/{$smarty.const.SITE_PLUGINS}list/{$ids}/WM/Files.m3u">wmv/wma</a>
+<a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/MP4/Files.m3u">mp4</a>
+: <a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/MPG/Files.m3u">mpg/mp3</a>
+: <a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/WM/Files.m3u">wmv/wma</a>
 </body>
 </html>
 {elseif $smarty.request.m3u_type == 'MP4'}
@@ -36,10 +36,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP4/{$files[file].id}.mp4
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4/{$files[file].id}.mp4
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP4A/{$files[file].id}.mp4
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4A/{$files[file].id}.mp4
 {/if}
 {/section}
 {elseif $smarty.request.m3u_type == 'WM'}
@@ -57,10 +57,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/WMV/{$files[file].id}.wmv
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMV/{$files[file].id}.wmv
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/WMA/{$files[file].id}.wma
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMA/{$files[file].id}.wma
 {/if}
 {/section}
 {elseif $smarty.request.m3u_type == 'MPG'}
@@ -78,10 +78,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MPG/{$files[file].id}.mpg
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MPG/{$files[file].id}.mpg
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.SITE_HTMLPATH}{$smarty.const.SITE_PLUGINS}encode/{$files[file].id}/MP3/{$files[file].id}.mp3
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP3/{$files[file].id}.mp3
 {/if}
 {/section}
 {/if}
