--- a/templates/default/query.html
+++ b/templates/default/query.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$smarty.const.SITE_NAME}: Query</title>
+<title>{$smarty.const.HTML_NAME}: Query</title>
 {if $smarty.request.detail == 3}
 {literal}
 <style>
