--- a/templates/extjs/css/Filetypes.css
+++ b/templates/extjs/css/Filetypes.css
@@ -5,21 +5,21 @@
 	background-repeat:no-repeat;
 }
 .detail, .detail.file_ext_ {
-	background-image:url(/templates/extjs/images/filetypes/file_16x16.png);
+	background-image:url(../images/filetypes/file_16x16.png);
 }
 .detail.file_ext_FOLDER {
-	background-image:url(/templates/extjs/images/filetypes/folder_16x16.png);
+	background-image:url(../images/filetypes/folder_16x16.png);
 }
 .detail.file_ext_MP3 {
-	background-image:url(/templates/extjs/images/filetypes/music_16x16.png);
+	background-image:url(../images/filetypes/music_16x16.png);
 }
 .thumb, .thumb.file_ext_ {
-	background-image:url(/templates/extjs/images/filetypes/file_96x96.png);
+	background-image:url(../images/filetypes/file_96x96.png);
 }
 .thumb.file_ext_FOLDER {
-	background-image:url(/templates/extjs/images/filetypes/folder_96x96.png);
+	background-image:url(../images/filetypes/folder_96x96.png);
 }
 .thumb.file_ext_MP3 {
-	background-image:url(/templates/extjs/images/filetypes/music_96x96.png);
+	background-image:url(../images/filetypes/music_96x96.png);
 }
 
