--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>{$smarty.const.SITE_NAME}</title>
+	<title>{$smarty.const.HTML_NAME}</title>
 	{literal}
     <style type="text/css">
     .loading-mask{
@@ -39,9 +39,9 @@
 	{/literal}
 
 	<script type="text/javascript">
-		site_path = '/{$smarty.const.SITE_HTMLROOT}';
-		template_path = '/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}';
-		plugins_path = '/{$smarty.const.SITE_PLUGINS}';
+		site_path = '/{$smarty.const.HTML_ROOT}';
+		template_path = '/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}';
+		plugins_path = '/{$smarty.const.HTML_PLUGINS}';
 	</script>
 </head>
 
@@ -51,57 +51,57 @@
 		<div class="loading-indicator">Media Server<br /><span id="loading-msg" class="loading-msg">Loading styles and images...</span></div>
 	</div>
     <!-- include everything after the loading indicator -->
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/resources/css/ext-all.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Filetypes.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Desktop.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Portal.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Downloads.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Player.css" />
-    <link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/Global.css" />
-	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/examples.css" />
-	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}css/lib.css" />
-	<link rel="stylesheet" type="text/css" href="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/resources/css/ext-ux-livegrid.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}extjs/resources/css/ext-all.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Filetypes.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Desktop.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Portal.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Downloads.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Player.css" />
+    <link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Global.css" />
+	<link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/examples.css" />
+	<link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/lib.css" />
+	<link rel="stylesheet" type="text/css" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/resources/css/ext-ux-livegrid.css" />
 
     <!-- GC -->
  	<!-- LIBS -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Core API...';</script>
- 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/adapter/ext/ext-base.js"></script>
+ 	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}extjs/adapter/ext/ext-base.js"></script>
 
  	<!-- ENDLIBS -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Core Components)';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}extjs/ext-all-debug.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}extjs/ext-all-debug.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Library Mods)';</script>
- 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Library.js"></script>
+ 	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Library.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Buffered Components)';</script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/GridPanel.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/GridView.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/RowSelectionModel.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/Store.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}livegrid/src/Toolbar.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/GridPanel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/GridView.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/RowSelectionModel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/Store.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/Toolbar.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Media Components)';</script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/XMLTreeNode.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/FolderView.js"></script>
- 	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Address.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/XMLTreeNode.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/FolderView.js"></script>
+ 	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Address.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Extra Components)';</script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}ux/mediapanel.js"></script>
-	<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/GMapPanel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}ux/mediapanel.js"></script>
+	<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/GMapPanel.js"></script>
 
     <!-- DESKTOP -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initializing Desktop...';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/StartMenu.js"></script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/TaskBar.js"></script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Desktop.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/StartMenu.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/TaskBar.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Desktop.js"></script>
 	
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications...';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/App.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/App.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Module)';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Module.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Module.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Portal)';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Portal.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Portal.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Downloads)';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Downloads.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Downloads.js"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Player)';</script>
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Player.js"></script>
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Player.js"></script>
 
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Personal Settings...';</script>
 	<div id="x-desktop">
@@ -127,8 +127,8 @@
 		<div class="x-clear"></div>
 	</div>
 	
-    <script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/Config.js"></script>
-    <!--<script type="text/javascript" src="/{$smarty.const.SITE_HTMLROOT}{$smarty.const.SITE_TEMPLATE}js/examples.js"></script>-->
+    <script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/Config.js"></script>
+    <!--<script type="text/javascript" src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}js/examples.js"></script>-->
 	
 	{literal}
 	<script type="text/javascript">
