--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -41,7 +41,7 @@
 	<script type="text/javascript">
 		site_path = '/{$smarty.const.HTML_ROOT}';
 		template_path = '/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}';
-		plugins_path = '/{$smarty.const.HTML_PLUGINS}';
+		plugins_path = '/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}';
 		dir_sep = "\{$smarty.const.DIRECTORY_SEPARATOR}";
 		
 	</script>
