--- a/templates/default/m3u.html
+++ b/templates/default/m3u.html
@@ -16,9 +16,26 @@
 <body>
 Note: All non-media types will be filtered out using this list type.<br />
 Select your audio/video format:<br />
-<a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/MP4/Files.m3u">mp4</a>
-: <a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/MPG/Files.m3u">mpg/mp3</a>
-: <a href="/{$smarty.const.HTML_PLUGINS}list/{$ids}/WM/Files.m3u">wmv/wma</a>
+<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}list/{$ids}/MP4/Files.m3u">mp4</a>
+: <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}list/{$ids}/MPG/Files.m3u">mpg/mp3</a>
+: <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}list/{$ids}/WM/Files.m3u">wmv/wma</a>
+<br />
+Some files that will be listed: <br />
+{php}
+global $files;
+$count = 0;
+foreach($files as $i => $file)
+{
+	$type = split('/', $file['Filemime']);
+	if($type[0] == 'audio' || $type[0] == 'video')
+    {
+    	print $file['Filename'];
+        $count++;
+    }
+    if($count == 10)
+    	break;
+}
+{/php}
 </body>
 </html>
 {elseif $smarty.request.m3u_type == 'MP4'}
@@ -36,10 +53,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4/{$files[file].id}.mp4
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4/{$files[file].id}.mp4
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4A/{$files[file].id}.mp4
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4A/{$files[file].id}.mp4
 {/if}
 {/section}
 {elseif $smarty.request.m3u_type == 'WM'}
@@ -57,10 +74,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMV/{$files[file].id}.wmv
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMV/{$files[file].id}.wmv
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMA/{$files[file].id}.wma
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMA/{$files[file].id}.wma
 {/if}
 {/section}
 {elseif $smarty.request.m3u_type == 'MPG'}
@@ -78,10 +95,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MPG/{$files[file].id}.mpg
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MPG/{$files[file].id}.mpg
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP3/{$files[file].id}.mp3
+{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP3/{$files[file].id}.mp3
 {/if}
 {/section}
 {/if}
