--- a/templates/default/pages.html
+++ b/templates/default/pages.html
@@ -1,10 +1,16 @@
 {assign var=page_count value=$smarty.request.limit}
+{assign var=page_str value=$smarty.server.PHP_SELF|cat:'?'}
+{foreach from=$smarty.get key=k item=v}
+{if $k != "start"}
+{assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
+{/if}
+{/foreach}
 Page {if $page > 0}
 		{if $page > $page_count}
-			<a href="{$smarty.server.PHP_SELF}?start=0">First</a>
-			<a href="{$smarty.server.PHP_SELF}?start={$page-$page_count}">Prev</a>
+			<a href="{$page_str}&start=0">First</a>
+			<a href="{$page_str}&start={$page-$page_count}">Prev</a>
 		{else}
-			<a href="{$smarty.server.PHP_SELF}?start=0">First</a>
+			<a href="{$page_str}&start=0">First</a>
 		{/if}
 		|
 	{/if}
@@ -19,16 +25,16 @@ Page {if $page > 0}
 	{if $smarty.section.page_select.index == $page_int}
 	<b>{$page_int+1}</b>
 	{else}
-	<a href="{$smarty.server.PHP_SELF}?start={$smarty.section.page_select.index*$page_count}">{$smarty.section.page_select.index+1}</a>
+	<a href="{$page_str}&start={$smarty.section.page_select.index*$page_count}">{$smarty.section.page_select.index+1}</a>
 	{/if}
 {/section}
 {if $page < $total_count-$page_count}
 	|
 	{assign var=last_page value=$total_count/$page_count|floor}
 	{if $page < $total_count-$page_count-$page_count}
-		<a href="{$smarty.server.PHP_SELF}?start={$page+$page_count}">Next</a>
-		<a href="{$smarty.server.PHP_SELF}?start={$last_page*$page_count}">Last</a>
+		<a href="{$page_str}&start={$page+$page_count}">Next</a>
+		<a href="{$page_str}&start={$last_page*$page_count}">Last</a>
 	{else}
-		<a href="{$smarty.server.PHP_SELF}?start={$last_page*$page_count}">Last</a>
+		<a href="{$page_str}&start={$last_page*$page_count}">Last</a>
 	{/if}
 {/if}
