git-svn-id: svn://localhost/Media%20Server@57 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/pages.html
+++ b/templates/default/pages.html
@@ -17,6 +17,7 @@ Page {if $page > 0}
 {assign var=page_int value=$page/$page_count}
 {assign var=lower value=$page_int-8}
 {assign var=upper value=$page_int+8}
+{assign var=total_count value=$total_count-1}
 {assign var=pages value=$total_count/$page_count|floor}
 {if $lower < 0}{assign var=upper value=$upper-$lower}{assign var=lower value=0}{/if}
 {if $upper > $pages}{assign var=upper value=$pages}{assign var=lower value=$pages-$page_count-1}{/if}
