git-svn-id: svn://localhost/Media%20Server@58 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/display.html
+++ b/templates/default/display.html
@@ -72,7 +72,7 @@
 			{else}
 				{assign var=column_selected value=false}
 			{/if}
-			<input type="checkbox" name="on[]" value="{$columns[column]}" {if $column_selected}checked="checked"{/if} />{$columns[column]}<br />
+			<input type="checkbox" name="columns_on[]" value="{$columns[column]}" {if $column_selected}checked="checked"{/if} />{$columns[column]}<br />
 		{/section}		
 		Apply Settings.
 		<input type="submit" name="display" value="Go" />
@@ -105,7 +105,7 @@
 			{else}
 				{assign var=column_selected value=false}
 			{/if}
-			<input type="checkbox" name="on[]" value="{$columns[column]}" {if $column_selected}checked="checked"{/if} />{$columns[column]}<br />
+			<input type="checkbox" name="columns_on[]" value="{$columns[column]}" {if $column_selected}checked="checked"{/if} />{$columns[column]}<br />
 		{/section}		
 		Apply Settings.
 		<input type="submit" name="display" value="Go" />
