--- a/templates/default/pages.html
+++ b/templates/default/pages.html
@@ -1,10 +1,12 @@
 {assign var=page_count value=$smarty.request.limit}
-{assign var=page_str value=$smarty.server.PHP_SELF|cat:'?'}
+{assign var=page_str value=''}
 {foreach from=$smarty.get key=k item=v}
+{if $page_str != ''}{assign var=page_str value=$page_str|cat:'&amp;'}{/if}
 {if $k != "start"}
 {assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
 {/if}
 {/foreach}
+{assign var=page_str value=$smarty.server.PHP_SELF|cat:'?'|cat:$page_str}
 Page {if $page > 0}
 		{if $page > $page_count}
 			<a href="{$page_str}&start=0">First</a>
@@ -29,7 +31,7 @@ Page {if $page > 0}
 	<a href="{$page_str}&start={$smarty.section.page_select.index*$page_count}">{$smarty.section.page_select.index+1}</a>
 	{/if}
 {/section}
-{if $page < $total_count-$page_count}
+{if $page <= $total_count-$page_count}
 	|
 	{assign var=last_page value=$total_count/$page_count|floor}
 	{if $page < $total_count-$page_count-$page_count}
