--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -18,13 +18,8 @@
 			{/if}
 			<input type="radio" name="item[{$files[file].id}]" value="on" {if $item_selected}checked="checked"{/if} />
 			<input type="radio" name="item[{$files[file].id}]" value="off" {if !$item_selected}checked="checked"{/if} />
-            {if $smarty.const.USE_DATABASE}
-                {if $files[file].Filetype=="FOLDER" || ('db_archive::handles'|@call_user_func:$files[file].Filepath && $smarty.request.cat == 'db_file')}<a href="?dir={$files[file].Filepath}{if 'db_archive::handles'|@call_user_func:$files[file].Filepath}&cat=db_archive{/if}">{$files[file].Filepath}</a>
-                {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{if 'db_archive::handles'|@call_user_func:$files[file].Filepath}db_archive{elseif 'db_image_browser::handles'|@call_user_func:$files[file].Filepath}db_image_browser{else}db_file{/if}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
-			{else}
-                {if $files[file].Filetype=="FOLDER" || ('fs_archive::handles'|@call_user_func:$files[file].Filepath && $smarty.request.cat == 'fs_file')}<a href="?dir={$files[file].Filepath}{if 'fs_archive::handles'|@call_user_func:$files[file].Filepath}&cat=fs_archive{/if}">{$files[file].Filepath}</a>
-                {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{if 'fs_archive::handles'|@call_user_func:$files[file].Filepath}fs_archive{elseif 'fs_image_browser::handles'|@call_user_func:$files[file].Filepath}fs_image_browser{else}fs_file{/if}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
-            {/if}
+            {if $files[file].Filetype=="FOLDER" || ($files[file].Filepath|@handles:'archive' && ($smarty.request.cat == 'fs_file' || $smarty.request.cat == 'db_file'))}<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={if $smart.const.USE_DATABASE}db_{else}fs_{/if}archive{/if}">{$files[file].Filepath}</a>
+            {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{if $files[file].Filepath|@handles:'archive'}{if $smart.const.USE_DATABASE}db_{else}fs_{/if}archive{elseif $files[file].Filepath|@handles:'image_browser'}{if $smart.const.USE_DATABASE}db_{else}fs_{/if}image_browser{else}fs_file{/if}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
             {if $smarty.request.detail == 2}
 				{foreach from=$smarty.session.columns item=column_value}
 					{if isset($files[file].$column_value)}
@@ -35,15 +30,16 @@
             - Download:
             	<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$files[file].id}/Files.zip">zip</a> :
                 <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$files[file].id}/Files.torrent">torrent</a>
-                {if $type=="video"}
+                {* if $files[file].Filepath|@handles:'video'}
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4/File{$files[file].id}.mp4">mp4</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MPG/File{$files[file].id}.mpeg">mpg</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMV/File{$files[file].id}.wmv">wmv</a>
-                {elseif $type=="audio"}
+                *}
+                {if $files[file].Filepath|@handles:'audio'}
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP4A/File{$files[file].id}.mp4">mp4</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
-                {elseif $type=="image"}
+                {elseif $files[file].Filepath|@handles:'image'}
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$files[file].id}/JPG/File{$files[file].id}.jpg">jpg</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$files[file].id}/GIF/File{$files[file].id}.gif">gif</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$files[file].id}/PNG/File{$files[file].id}.png">png</a>
