--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -1,3 +1,4 @@
+{if $smart.const.USE_DATABASE}{assign var=prefix value='db_'}{else}{assign var=prefix value='fs_'}{/if}
 {if $smarty.request.detail == 0 || $smarty.request.detail == 1 || $smarty.request.detail == 2}
 	There are {$total_count} result(s).<br />
 	{assign var=page value=$smarty.request.start|intval}
@@ -18,8 +19,11 @@
 			{/if}
 			<input type="radio" name="item[{$files[file].id}]" value="on" {if $item_selected}checked="checked"{/if} />
 			<input type="radio" name="item[{$files[file].id}]" value="off" {if !$item_selected}checked="checked"{/if} />
-            {if $files[file].Filetype=="FOLDER" || ($files[file].Filepath|@handles:'archive' && ($smarty.request.cat == 'fs_file' || $smarty.request.cat == 'db_file'))}<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={if $smart.const.USE_DATABASE}db_{else}fs_{/if}archive{/if}">{$files[file].Filepath}</a>
-            {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{if $files[file].Filepath|@handles:'archive'}{if $smart.const.USE_DATABASE}db_{else}fs_{/if}archive{elseif $files[file].Filepath|@handles:'image_browser'}{if $smart.const.USE_DATABASE}db_{else}fs_{/if}image_browser{else}fs_file{/if}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
+            {if $files[file].Filetype=="FOLDER" || (($files[file].Filepath|@handles:'archive' || $files[file].Filepath|@handles:'diskimage') && ($smarty.request.cat == 'fs_file' || $smarty.request.cat == 'db_file'))}<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={$prefix}archive{elseif $files[file].Filepath|@handles:'diskimage'}&cat={$prefix}diskimage{/if}">{$files[file].Filepath}</a>
+            {elseif $files[file].Filepath|@handles:'archive'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}archive/{$files[file].id}/OUT/{$files[file].Filename}">{$files[file].Filepath}</a>
+            {elseif $files[file].Filepath|@handles:'diskimage'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$prefix}diskimage/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
+            {elseif $files[file].Filepath|@handles:'image_browser'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$prefix}image_browser/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
+            {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$prefix}file/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
             {if $smarty.request.detail == 2}
 				{foreach from=$smarty.session.columns item=column_value}
 					{if isset($files[file].$column_value)}
